--- a/app/admin/view/index/edit.html
+++ b/app/admin/view/index/edit.html
@@ -106,42 +106,51 @@
                 </div>
             </div>-->
 
-            <h2 class="sub-header">App Add</h2>
 
+            <h2 class="sub-header">{$app_name}</h2>
+            {foreach name='$app_names' item='v'}
             <form class="form-inline">
                 <div class="form-group">
                     <label>ProjectName</label>
-                    <input type="text" name="project_name" class="form-control" placeholder="project_name">
+                    <input type="text" name="project_name" value="{$app_name}" class="form-control"
+                           placeholder="project_name">
+                    <input type="hidden" name="id" value="{$v.id}">
                 </div>
                 <div class="app1">
                     <div class="form-group">
                         <label>appOne</label>
-                        <input type="text" name="app_one" class="form-control" placeholder="AppName">
+                        <input type="text" name="app_one" value="{$v.app_one}" class="form-control"
+                               placeholder="AppName">
                     </div>
                     <div class="form-group">
                         <label>valueOne</label>
-                        <input type="text" name="value_one" class="form-control" placeholder="Value">
+                        <input type="text" name="value_one" value="{$v.value_one}" class="form-control"
+                               placeholder="Value">
                     </div>
                     <div class="form-group">
                         <label>appTwo</label>
-                        <input type="text" name="app_two" class="form-control" placeholder="AppName">
+                        <input type="text" name="app_two" value="{$v.app_two}" class="form-control"
+                               placeholder="AppName">
                     </div>
                     <div class="form-group">
                         <label>valueTwo</label>
-                        <input type="text" name="value_two" class="form-control" placeholder="Value">
+                        <input type="text" name="value_two" value="{$v.value_two}" class="form-control"
+                               placeholder="Value">
                     </div>
                     <div class="form-group">
                         <label>appThree</label>
-                        <input type="text" name="app_three" class="form-control" placeholder="AppName">
+                        <input type="text" name="app_three" value="{$v.app_three}" class="form-control"
+                               placeholder="AppName">
                     </div>
                     <div class="form-group">
                         <label>valueThree</label>
-                        <input type="text" name="value_three" class="form-control" placeholder="Value">
+                        <input type="text" name="value_three" value="{$v.value_three}" class="form-control"
+                               placeholder="Value">
                     </div>
                     <button style="float: right" class="btn btn-default add">+</button>
                 </div>
+                {/foreach}
             </form>
-
             <div>
                 <button id="submit" class="btn btn-primary btn-lg btn-block">确认提交</button>
             </div>
@@ -176,16 +185,17 @@
     }
     $("#submit").click(function () {
         var stock = '';
-        $("input[name='project_name'],input[name='app_one'],input[name='value_one'],input[name='app_two'],input[name='value_two'],input[name='app_three'],input[name='value_three']").each(function () {
-            stock = stock+'|'+$(this).attr('name') + '-' + $(this).val();
+        $("input[name='project_name'],input[name='id'],input[name='app_one'],input[name='value_one'],input[name='app_two'],input[name='value_two'],input[name='app_three'],input[name='value_three']").each(function () {
+            stock = stock + '|' + $(this).attr('name') + '-' + $(this).val();
         });
         var data = {
-            str:stock,
+            project_id: {$project_id},
+            str: stock,
         };
 //        alert(stock)
         $.ajax({
             type: 'post',
-            url: 'index/index',
+            url: '/index.php/admin/index/update',
             data: data,
             cache: false,
 //            dataType: 'json',
