--- a/app/index/view/index/index.html
+++ b/app/index/view/index/index.html
@@ -24,6 +24,7 @@ $.ajax({
         alert('网络错误');
     },
     success: function (res) {
+        console.log(res);
         $('#box').append('<li>City: ' + res.city + '</li>');
         $('#box').append('<li>Weather: ' + res.data[0].wea + '</li>');
         $('#box').append('<li>Tips: ' + res.data[0].air_tips + '</li>');
